--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ dist
 
 # TernJS port file
 .tern-port
+
+# ignore all files in dist folder
+dist/*
+
+# not ignore snowflake.png
+!dist/snowflake.png
