--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
-  "presets": ["@babel/env", "@babel/typescript"],
+  "presets": [
+    "@babel/env",
+    "@babel/typescript",
+    "@babel/react",
+    "@emotion/babel-preset-css-prop"
+  ],
   "plugins": ["@babel/plugin-proposal-class-properties"]
 }
