--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack --mode=development",
     "build": "webpack --mode=production",
     "watch": "webpack --mode=development --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve --mode=development"
   },
   "author": "Codesanok Team",
   "license": "MIT",
@@ -15,8 +15,12 @@
     "@babel/core": "7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.16.5",
     "@babel/preset-env": "7.4.4",
+    "@babel/preset-react": "^7.16.5",
     "@babel/preset-typescript": "7.3.3",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
     "@types/node": "^9.4.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@webpack-cli/serve": "^1.3.1",
     "babel-loader": "^8.2.2",
     "editorconfig": "^0.15.3",
@@ -28,5 +32,9 @@
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^4.6.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
